First Impression about Index

--- a/index.html
+++ b/index.html
@@ -3,22 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Audi</title>
 </head>
 <body>
     <nav>
         <ul>
-            <li>
+            <li class="logo">
                 <a href="index.html">
                     <img src="logo.png" alt="Logo">
                 </a>
             </li>
             <li><a href="Models.html">Models</a></li>
             <li><a href="About.html">About</a></li>
+            <li class="user">
+                <a href="Login.html"> 
+                    <img src="user.png" alt="User">
+                </a>
+            </li>            
         </ul>
     </nav>
     <main>
-        <h1>Audi</h1>
+        <img src="Background.png" alt="RS6 Background" class="background">
     </main>
+    
+    <footer>
+        <p>&copy; 2025 Audi. All rights reserved.</p>
+    </footer>
+    
 </body>
 </html>
