--- a/BuildPrice.html
+++ b/BuildPrice.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+
     <title>Build</title>
 </head>
 <body>
@@ -28,7 +30,6 @@
         <div class="BuildNames">
             <img src="BuildImage.png" alt="RS6 Background" class="Build">
             <h2>2025 RS 6 Avant Performance</h2>
-            
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque optio debitis accusantium rerum ut nam, ipsam illum sit modi minus vitae veniam enim, neque suscipit culpa! Aperiam voluptates quos blanditiis.</p>
         </div>
 
