--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
             <br>  
 
             <section class="image-slider">
-                <input type="radio" name="slider" id="slide6" checked>
+                <input type="radio" name="slider" id="slide6">
                 <input type="radio" name="slider" id="slide7">
                 <input type="radio" name="slider" id="slide8">
                 <input type="radio" name="slider" id="slide9">
@@ -194,7 +194,7 @@
             <br>  
 
             <section class="image-slider">
-                <input type="radio" name="slider" id="slide11" checked>
+                <input type="radio" name="slider" id="slide11">
                 <input type="radio" name="slider" id="slide12">
                 <input type="radio" name="slider" id="slide13">
                 <input type="radio" name="slider" id="slide14">
@@ -246,11 +246,18 @@
         <section id="technical-specs">
             <div id ='specs'>
                 <h2>Technical Specs</h2>
-                    <table>
-                        <caption>2025 RS 6 Avant Performance</caption>
+                <br>
+                <br>
+                    <table id="specs-table">
+                        <tr>
+                            <td class="title-specs"><b>2025 RS 6 Avant Performance</b></td>    
                             <tr>
                                 <td>Vehicle Type:</td>
-                                <td>Front-engine, all-wheel-drive, 5-passenger, 4-door wagon </td>
+                                <td>Front-engine, all-wheel-drive</td>
+                            </tr>
+                            <tr>
+                                <td></td>
+                                <td>5-passenger, 4-door wagon </td>
                             </tr>
                             <tr>
                                 <th>Engine</th>
@@ -300,7 +307,24 @@
                                 <td>Weight:</td>
                                 <td>1,880 kg</td>
                             </tr>
-
+                            <tr>
+                                <th>Performance</th>
+                            <tr>
+                                <td>0-100 km/h:</td>
+                                <td>3.0 seconds</td>
+                            </tr>
+                            <tr>
+                                <td>0-160km/h:</td> 
+                                <td>7.0 seconds</td>
+                            </tr>
+                            <tr>
+                                <td>1/4 Mile:</td>
+                                <td>11,2 segundos</td>
+                            </tr>
+                            <tr>
+                                <td>Top Speed:</td>
+                                <td>305,78 km/h</td>
+                            </tr>
                     </table>
 
             </div>
