--- a/BuildPrice.html
+++ b/BuildPrice.html
@@ -297,13 +297,14 @@
         </div> 
         
         <footer>
-            <nav class="footer-nav">
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="Models.html">Models</a></li>
-                    <li><a href="About.html">About</a></li>
-                </ul>
-            </nav>
+            <footer class="price-footer">
+                <a href="#">2025 Audi RS 6 Avant performance </a>
+                <div class="price">
+                    <span>Price as built *</span>
+                    <b> <br>$151,840</b>
+                </div>
+                <a href="index.html" id="summary">Summary</a>
+            </footer>
         </footer>
     </main>
 </body>
