--- a/BuildPrice.html
+++ b/BuildPrice.html
@@ -18,7 +18,7 @@
                 </a>
             </li>
             <li><a href="Models.html">Models</a></li>
-            <li><a href="About.html">About</a></li>
+            <li><a href="about.html">About</a></li>
             <li class="user">
                 <a href="Login.html"> 
                     <img src="images/user.png" alt="User">
