--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
                     <img src="images/logo.png" alt="Logo">
                 </a>
             </li>
-            <li><a href="Models.html">Models</a></li>
+            <li><a href="models.html">Models</a></li>
             <li><a href="about.html">About</a></li>
             <li class="user">
                 <a href="Login.html"> 
@@ -31,27 +31,29 @@
             <img src="images/Me.png" alt="Matheus">
         </div>
         <div class="message">
-            <h2>Matheus Verissimo Gonzalez</h2>
+            <h2>Matheus Verissimo Gonzalez <br><br></h2>
             <p>
                 Hey! My name is Matheus,
                 I'm a passionate tech enthusiast with a technical high school diploma in IT from UNIVAP – Brazil.  Web Developer with 1+ year of front-end and database experience, with strong knowledge of Apex, LWC, HTML, CSS, JavaScript, SQL, Python and Git. During my studies, I worked on impactful projects, including a full system developed for a senior care clinic, which helped me gain real-world experience early on.
 
-                <br><br>Currently my front-end development skills through a Web Development program at Tamwood International College in Vancouver, Canada. There, I'm sharpening my knowledge in HTML, CSS, JavaScript, SQL, and Python to become a more versatile and well-rounded developer.
+                <br><br>    Currently my front-end development skills through a Web Development program at Tamwood International College in Vancouver, Canada. There, I'm sharpening my knowledge in HTML, CSS, JavaScript, SQL, and Python to become a more versatile and well-rounded developer.
 
                 <br><br>I'm also on the path to becoming a Salesforce Developer. I'm learning through Udemy courses and Salesforce's own Trailhead platform, where I've achieved the Mountaineer rank with 32 badges, 22,000 points +.
             </p>
         </div>
         <div class="contact">
-            <a href="#">
+            <a href="https://www.instagram.com/matheus.vg_/">
                 <img src="images/instagram.png" alt="instagram" name="instagram"id="instagram">
             </a>
-            <a href="#">
+
+            <a href="https://www.linkedin.com/in/matheus-gonzalez-a343481bb/">
                 <img src="images/linkedin.png" alt="linkedin" name="linkedin" id="linkedin">
             </a>
             <a href="#">
                 <img src="images/email.png" alt="email" name="email" id="email">    
             </a>
             </div>
+            
         
     </form>
 </body>
