--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
-
     <title>Audi</title>
+
 </head>
 <body>
     <nav>
@@ -80,7 +80,7 @@
             </audio>
         </div>
         <section class="image-slider">
-            <input type="radio" name="slider" id="slide1" checked>
+            <input type="radio" name="slider" id="slide1" checked>  <!-- checked is to make the first slide visible-->
             <input type="radio" name="slider" id="slide2">
             <input type="radio" name="slider" id="slide3">
             <input type="radio" name="slider" id="slide4">
@@ -96,7 +96,7 @@
             
 
         
-            <div class="dots">
+            <div class="dots"> <!-- to make the dots visible, select-->
                 <label for="slide1" class="dot"></label>
                 <label for="slide2" class="dot"></label>
                 <label for="slide3" class="dot"></label>
