--- a/index.html
+++ b/index.html
@@ -5,26 +5,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <title>Audi</title>
 
 </head>
 <body>
     <nav>
-        <ul>
-            <li class="logo">
-                <a href="index.html">
-                    <img src="images/logo.png" alt="Logo">
-                </a>
-            </li>
+        <div class="nav-container">
+            <a href="index.html" class="logo">
+            <img src="images/logo.png" alt="Logo">
+            </a>
+
+            <input type="checkbox" id="menu-toggle" />
+            <label for="menu-toggle" class="hamburger">&#9776;</label>
+
+            <ul class="nav-links">
             <li><a href="Models.html">Models</a></li>
             <li><a href="about.html">About</a></li>
-            <li class="user">
-                <a href="Login.html"> 
-                    <img src="images/user.png" alt="User">
-                </a>
-            </li>            
-        </ul>
+            <li><a href="#">FAQ</a></li>
+            </ul>
+
+            <a href="Login.html" class="user">
+            <img src="images/user.png" alt="User">
+            </a>
+        </div>
     </nav>
+
     <main>
         <img src="images/Background.png" alt="RS6 Background" class="background">
         <h2>2025 RS 6 Avant Performance</h2>
