--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
             <ul class="nav-links">
             <li><a href="Models.html">Models</a></li>
+            <li><a href="BuildPrice.html">Build & Price</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="#">FAQ</a></li>
             </ul>
