feat: All pages are now responsive. Changes in some buttons due to responsiveness

--- a/BuildPrice.html
+++ b/BuildPrice.html
@@ -24,7 +24,7 @@
             <li><a href="Models.html">Models</a></li>
             <li><a href="BuildPrice.html">Build & Price</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="#">FAQ</a></li>
+            <li><a href="faq.html">FAQ</a></li>
             </ul>
 
             <a href="Login.html" class="user">
@@ -68,12 +68,13 @@
                 </div>
             </div>            
             <section class="trimline-section">
+              <div class="info">
                 <h1>2025 RS 6 Avant performance</h1>
                 <h2>RS 6 Avant performance quattro tiptronic</h2>
 
                 <div class="step">Step 1 of 4</div>
                 <div class="section-title">Trimline and engine</div>
-
+              </div>
                 <div class="card">
                     <h3>RS 6 Avant performance quattro tiptronic</h3>
                     <div class="price">$151,840</div>
@@ -173,7 +174,7 @@
                               <span>Daytona Grey Pearl Effect</span>
                             </div>
                             <div class="color-option">
-                              <label for="color-crystal" class="color-dot crytal"></label>
+                              <label for="color-blackCristal" class="color-dot crytal"></label>
                               <span>Sebring Black Crystal Effect</span>
                           
                         </div>
