--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
             <li><a href="Models.html">Models</a></li>
             <li><a href="BuildPrice.html">Build & Price</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="#">FAQ</a></li>
+            <li><a href="faq.html">FAQ</a></li>
             </ul>
 
             <a href="Login.html" class="user">
