Fixed: Dots in images

--- a/BuildPrice.html
+++ b/BuildPrice.html
@@ -310,7 +310,7 @@
                     <span>Price as built *</span>
                     <b> <br>$151,840</b>
                 </div>
-                <a href="index.html" id="summary">Summary</a>
+                <a href="contactUs.html" id="summary">Summary</a>
             </footer>
         </footer>
     </main>
