--- a/faq.html
+++ b/faq.html
@@ -23,7 +23,8 @@
             <li><a href="Models.html">Models</a></li>
             <li><a href="BuildPrice.html">Build & Price</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="#">FAQ</a></li>
+            <li><a href="faq.html">FAQ</a></li>
+            <li><a href="contactUs.html">Contact Us</a></li>
             </ul>
 
             <a href="Login.html" class="user">
