--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <li><a href="BuildPrice.html">Build & Price</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="faq.html">FAQ</a></li>
+            <li><a href="contactUs.html">Contact Us</a></li>
             </ul>
 
             <a href="Login.html" class="user">
