Update on ContactUs and merging with FAQ

--- a/contactUs.html
+++ b/contactUs.html
@@ -37,6 +37,41 @@
                 <img class="bg-contact"  src="images/bg-contact.jpeg" alt="RS6 Background">
                 <h1 class="contactUs">Contact Audi Canada</h1>
             </div>
+            <div class="faq-container">
+            <h1>FAQ</h1>
+
+            <div class="faq-item">
+                <input type="checkbox" id="faq2">
+                <label for="faq2" class="faq-label">How fast can it go from 0 to 100 km/h?</label>
+                <p>It can accelerate from 0 to 100 km/h in approximately 3.4 seconds.</p>
+            </div>
+
+            <div class="faq-item">
+                <input type="checkbox" id="faq3">
+                <label for="faq3" class="faq-label">What is the fuel efficiency?</label>
+                <p>The RS 6 Avant Performance has an average fuel consumption of around 11.7L/100km (8.5km/L).</p>
+            </div>
+
+            <div class="faq-item">
+                <input type="checkbox" id="faq1">
+                <label for="faq1" class="faq-label">How does it handle in corners and at high speeds (stability)?</label>
+                <p>The Audi RS6 offers excellent stability at high speeds, thanks to its Quattro all-wheel-drive system and adaptive air suspension. It feels planted in corners, with minimal body roll, and delivers a confident, controlled driving experience—even on twisty roads. Dynamic steering and torque vectoring further enhance its agility for a car of its size and weight.</p>
+            </div>
+
+            <div class="faq-item">
+                <input type="checkbox" id="faq4">
+                <label for="faq4" class="faq-label">How much does preventive and corrective maintenance cost?</label>
+                <p>The RS6's maintenance costs are above average due to its high-performance components. Preventative maintenance (oil changes, filters, inspections) can range from $500 to $1,000 per visit. Corrective repairs (such as suspension, brake, or engine problems) can be significantly more expensive, especially if they are out of warranty. Extended warranties or certified pre-owned (CPO) programs are often recommended.</p>
+            </div>
+
+            <div class="faq-item">
+                <input type="checkbox" id="faq5">
+                <label for="faq5" class="faq-label">Can it be used as a family car despite its sportiness?</label>
+                <p>Yes. The RS6 is one of the few high-performance cars that doubles as a practical family car. It has ample rear-seat space, a large cargo area (since it's a wagon), and includes comfort features like climate control zones, heated seats, and advanced safety systems. Many owners use it as a daily driver or even as their main family vehicle.</p>
+            </div>
+
+
+        </div>
             <form id="contact-form" action="/submit-path" method="post">
                 <div class="contactsNames">
                     <label class="labelsContact" for="name">Name:</label>
