Fixed some errors

--- a/BuildPrice.html
+++ b/BuildPrice.html
@@ -24,11 +24,10 @@
             <li><a href="Models.html">Models</a></li>
             <li><a href="BuildPrice.html">Build & Price</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="faq.html">FAQ</a></li>
             <li><a href="contactUs.html">Contact Us</a></li>
             </ul>
 
-            <a href="Login.html" class="user">
+            <a href="404.html" class="user">
             <img src="images/user.png" alt="User">
             </a>
         </div>
@@ -177,7 +176,7 @@
                             <div class="color-option">
                               <label for="color-blackCristal" class="color-dot crytal"></label>
                               <span>Sebring Black Crystal Effect</span>
-                          
+                          </div>
                         </div>
                       </div>
                     </div>
@@ -235,6 +234,7 @@
                             <label for="wheels-4" class="wheels-dot wheels-4"></label>
                             <span>22" 5-Y-spoke design, matte grey wheels</span>
                             </div>
+                        </div>
                       </div>
                     </div>
                   </div>  
@@ -297,6 +297,7 @@
                             <label for="interior-5" class="interior-dot interior-5"></label>
                             <span>RS Valcona leather upholstery with honeycomb <br> stitching, Seats: Black-Rock Grey, Dashboard: <br> Black, Carpet: Black, Headliner: Black
                             </span>
+                            </div>
                         </div>
                       </div>
                     </div>
@@ -304,7 +305,6 @@
             </section>
         </div> 
         
-        <footer>
             <footer class="price-footer">
                 <a href="#">2025 Audi RS 6 Avant performance </a>
                 <div class="price">
@@ -313,7 +313,6 @@
                 </div>
                 <a href="contactUs.html" id="summary">Summary</a>
             </footer>
-        </footer>
     </main>
 </body>
 </html>
