--- a/contactUs.html
+++ b/contactUs.html
@@ -22,11 +22,10 @@
             <li><a href="Models.html">Models</a></li>
             <li><a href="BuildPrice.html">Build & Price</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="faq.html">FAQ</a></li>
             <li><a href="contactUs.html">Contact Us</a></li>
             </ul>
 
-            <a href="Login.html" class="user">
+            <a href="404.html" class="user">
             <img src="images/user.png" alt="User">
             </a>
         </div>
@@ -81,7 +80,7 @@
                     <label class="labelsContact" for="phone">Phone:</label>
                     <input class ="inputContact" type="tel" id="phone" name="phone" required>
                     <label class="labelsContact" for="model">Model:</label>
-                    <select id="model" name="model" required>
+                    <select id="model" name="model">
                         <option value="Audi RS6">2025 RS 6 Avant Performance</option>
                         <option value="Audi E-tronic">Audi E-tronic</option>
                     </select>
