--- a/about.html
+++ b/about.html
@@ -24,11 +24,10 @@
             <li><a href="Models.html">Models</a></li>
             <li><a href="BuildPrice.html">Build & Price</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="faq.html">FAQ</a></li>
             <li><a href="contactUs.html">Contact Us</a></li>
             </ul>
 
-            <a href="Login.html" class="user">
+            <a href="404.html" class="user">
             <img src="images/user.png" alt="User">
             </a>
         </div>
@@ -41,8 +40,8 @@
             <h2>Matheus Verissimo Gonzalez <br></h2>
             
             <p>This project is about my Dream Car. Since I was a child, I have been fascinated by cars of all kinds, whether classic models or the latest innovations. I find it amazing how each piece fits together and can take you wherever you want. From design to mechanics, cars have always sparked my curiosity and imagination.<br> <br></p>
+            <h3 style="font-weight: bold; font-size: 20px; font-style: italic;">About Me</h3>
             <p>
-                <h3 style="font-weight: bold; font-size: 20px; font-style: italic;">About Me</h3>
                 Hey! My name is Matheus,
                 I'm a passionate tech enthusiast with a technical high school diploma in IT from UNIVAP – Brazil.  Web Developer with 1+ year of front-end and database experience, with strong knowledge of Apex, LWC, HTML, CSS, JavaScript, SQL, Python and Git. During my studies, I worked on impactful projects, including a full system developed for a senior care clinic, which helped me gain real-world experience early on.
 
@@ -53,14 +52,14 @@
         </header>
         <div class="contact">
             <a href="https://www.instagram.com/matheus.vg_/">
-                <img src="images/instagram.png" alt="instagram" name="instagram"id="instagram">
+                <img src="images/instagram.png" alt="instagram" id="instagram">
             </a>
 
             <a href="https://www.linkedin.com/in/matheus-gonzalez-a343481bb/">
-                <img src="images/linkedin.png" alt="linkedin" name="linkedin" id="linkedin">
+                <img src="images/linkedin.png" alt="linkedin" id="linkedin">
             </a>
             <a href="#">
-                <img src="images/email.png" alt="email" name="email" id="email">    
+                <img src="images/email.png" alt="email" id="email">    
             </a>
             </div>
     </form>
