--- a/faq.html
+++ b/faq.html
@@ -27,7 +27,7 @@
             <li><a href="contactUs.html">Contact Us</a></li>
             </ul>
 
-            <a href="Login.html" class="user">
+            <a href="404.html" class="user">
             <img src="images/user.png" alt="User">
             </a>
         </div>
@@ -66,22 +66,19 @@
         </div>
     </div>
 </div>
+</main>
 
-    </main>
-
-    <script>
+<script>
   const tabButtons = document.querySelectorAll('.tab-button');
   const tabContents = document.querySelectorAll('.faq-tab-content');
 
   tabButtons.forEach(button => {
     button.addEventListener('click', () => {
-      // Remove active from all
       tabButtons.forEach(btn => btn.classList.remove('active'));
       tabContents.forEach(content => content.classList.remove('active'));
 
-      // Activate current
       button.classList.add('active');
-      const tabId = button.getAttribute('data-tab');
+      const tabId = button.getAttribute('data-tab'); 
       document.getElementById(tabId).classList.add('active');
     });
   });
