--- a/index.html
+++ b/index.html
@@ -331,6 +331,18 @@
                     </table>
                 </div>
         </section>
+        <a href="#top" class="back-to-top" id="backToTopBtn"> ↑</a>
     </main>
+    <script>
+    const backToTopBtn = document.getElementById("backToTopBtn");
+
+    window.addEventListener("scroll", () => {
+        if (window.scrollY > 300) {
+        backToTopBtn.style.display = "block";
+        } else {
+        backToTopBtn.style.display = "none";
+        }
+    });
+    </script>
 </body>
 </html>
