--- a/index.html
+++ b/index.html
@@ -334,13 +334,12 @@
         <a href="#top" class="back-to-top" id="backToTopBtn"> ↑</a>
     </main>
     <script>
-    const backToTopBtn = document.getElementById("backToTopBtn");
-
-    window.addEventListener("scroll", () => {
-        if (window.scrollY > 300) {
-        backToTopBtn.style.display = "block";
-        } else {
-        backToTopBtn.style.display = "none";
+        const backTotop = document.getElementById('backToTopBtn');
+        window.addEventListener('scroll', () => {
+        if(window.scrollY > 500) {
+            backTotop.style.display = 'block';
+        }else {
+            backTotop.style.display = 'none';
         }
     });
     </script>
