Optimization for all the thing

--- a/about.html
+++ b/about.html
@@ -25,10 +25,11 @@
             <li><a href="BuildPrice.html">Build & Price</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="contactUs.html">Contact Us</a></li>
-            </ul>
+            <li><a href="gallery.html">Gallery</a></li> 
+        </ul>
 
             <a href="404.html" class="user">
-            <img src="images/user.png" alt="User">
+            <img src="images/user.webp" alt="User">
             </a>
         </div>
     </nav>
